fixing layout issue

--- a/data/assets/layout.css
+++ b/data/assets/layout.css
@@ -259,7 +259,7 @@
 
   max-width: 100%;
   /*min-width: 50%;*/
-  z-index: 1100;
+  z-index: 1030;
 }
 
 .col3 .row1 {
